--- a/src/views/Chart/ChartView.scss
+++ b/src/views/Chart/ChartView.scss
@@ -1,9 +1,61 @@
 .ChartView {
-  display: flex;
-  justify-content: center;
+  text-align: center;
   padding-top: 100px;
 
   &__item {
+    display: inline-block;
     padding: 0 20px;
+  }
+  &__navigation {
+    display: none;
+  }
+
+  @media (max-width: 900px) {
+    width: 300px;
+    overflow: hidden;
+    margin: 0 auto;
+
+    &__navigation {
+      display: block;
+      padding-bottom: 20px;
+    }
+    
+    &__slides {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+    }
+    &__slides::-webkit-scrollbar {
+      width: 5px;
+      height: 5px;
+    }
+    &__slides::-webkit-scrollbar-thumb {
+      background: black;
+    }
+    &__slides > &__item {
+      scroll-snap-align: start;
+      flex-shrink: 0;
+      margin-right: 20px;
+      transform-origin: center center;
+      transform: scale(1);
+      transition: transform 0.5s;
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    &__navigation > a {
+      display: inline-flex;
+      width: 20px;
+      height: 20px;
+      margin-right: 5px;
+      background: lightgrey;
+      border-radius: 50%;
+    }
+    &__navigation > a:active {
+      background: grey;
+    }
   }
 }
