--- a/src/views/Chart/ChartView.scss
+++ b/src/views/Chart/ChartView.scss
@@ -4,10 +4,8 @@
 
   &__item {
     display: inline-block;
-    padding: 0 20px;
-  }
-  &__navigation {
-    display: none;
+    padding: 0 20px 10px 0;
+    border-bottom: grey solid 0.5px;
   }
 
   @media (max-width: 900px) {
@@ -25,7 +23,6 @@
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
-    -webkit-overflow-scrolling: touch;
     }
     &__slides::-webkit-scrollbar {
       width: 5px;
