--- a/src/views/Chart/ChartView.scss
+++ b/src/views/Chart/ChartView.scss
@@ -12,47 +12,30 @@
     width: 300px;
     overflow: hidden;
     margin: 0 auto;
-
-    &__navigation {
-      display: block;
-      padding-bottom: 20px;
-    }
     
     &__slides {
-    display: flex;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
+      display: flex;
+      overflow-x: auto;
+      scroll-snap-type: x mandatory;
+      scroll-behavior: smooth;
     }
+
     &__slides::-webkit-scrollbar {
-      width: 5px;
-      height: 5px;
+      width: 8px;
+      height: 8px;
     }
+
     &__slides::-webkit-scrollbar-thumb {
       background: black;
     }
-    &__slides > &__item {
-      scroll-snap-align: start;
-      flex-shrink: 0;
-      margin-right: 20px;
-      transform-origin: center center;
-      transform: scale(1);
-      transition: transform 0.5s;
+
+    &__item {
       position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
-    }
-    &__navigation > a {
-      display: inline-flex;
-      width: 20px;
-      height: 20px;
-      margin-right: 5px;
-      background: lightgrey;
-      border-radius: 50%;
-    }
-    &__navigation > a:active {
-      background: grey;
+      flex-shrink: 0;
+      margin-right: 20px;
     }
   }
 }
